--- a/ESP32-CAM_MJPEG2SD-v98/data/MJPEG2SD.htm
+++ b/ESP32-CAM_MJPEG2SD-v98/data/MJPEG2SD.htm
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<!-- 
+<!--
+  ************************************************************ MJPEG2SD.htm ***
   s60sc 2022, 2023
   with ideas from @marekful
 -->
